# Sentinal

./: .gitignore  Claude.md  README.md  pyproject.toml
data/market_cache/: aapl.json  agg.json  amd.json  bnd.json  gld.json  googl.json  meta.json  msft.json  nvda.json  spy.json  vea.json  vnq.json
data/portfolios/: portfolio_a.json  portfolio_b.json  portfolio_c.json
docs/: DEMO_ENHANCEMENT_PLAN.md  DESIGN_FRAMEWORK.md  DESIGN_SYSTEM_V2.md  IMPLEMENTATION_PLAN.md  SECURITY_PRACTICES.md  SECURITY_REVIEW_PLAN.md  Sentinel — Architecture Specification
docs/archive/: IMPLEMENTATION_PLAN_V1.md
sentinel-web/: .env.example  .gitignore  README.md
sentinel-web/backend/: __init__.py  config.py  main.py  requirements.txt
sentinel-web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
sentinel-web/scripts/: start-dev.sh  stop-dev.sh
src/: main.py
src/agents/: __init__.py  base.py  coordinator.py  drift_agent.py  tax_agent.py
src/contracts/: __init__.py  interfaces.py  schemas.py  security.py  stubs.py
src/data/: __init__.py  market_cache.py  models.py  vector_store.py
src/demos/: __init__.py  golden_path.py  proactive_heartbeat.py  webhook_trigger.py
src/gateway/: __init__.py  gateway.py
src/memory/: __init__.py  context_manager.py
src/routing/: __init__.py  persona_router.py
src/security/: __init__.py  encryption.py  merkle.py  rbac.py  sessions.py
tests/: conftest.py  test_agents.py  test_e2e.py  test_encryption.py  test_gateway.py  test_merkle.py  test_phase3.py  test_rbac.py  test_state.py
(+63 files in other folders)
