[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = "Multi-agent UHNW portfolio monitoring and tax optimization system"
authors = ["Shubham"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.39.0"
pydantic = "^2.5.0"
transitions = "^0.9.0"
chromadb = "^0.4.0"
cryptography = "^42.0.0"
rich = "^13.7.0"
apscheduler = "^3.10.0"
python-dotenv = "^1.0.0"
aiofiles = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
bandit = "^1.7.0"

[tool.poetry.scripts]
sentinel = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Allow assert in tests
